# APFA-Prod

./: .aegis_handoff.md  .dockerignore  .env.example  .env.production  .eslintrc.cjs  .flake8  .git-push-helper.ps1  .gitignore  APFA-002-VALIDATION.md  CHANGELOG.md  CI-CD-STATUS.md  COMMIT-NOW.cmd  CONTRIBUTING.md  DEPLOYMENT-GUIDE.md  Dockerfile  Dockerfile.frontend  FINAL-VALIDATION-CHECKLIST.md  LICENSE  MORNING-FAILURES-SUMMARY.md  Makefile  NO-CONNECTION-FAILURES.md  PROJECT-COMPLETION-SUMMARY.md  PUSH-TO-GITHUB.bat  QUICK-START.md  README-FRONTEND.md  README-PROJECT-COMPLETE.md  README.md  TESTING-REPORT.md  WORKFLOW-FAILURES-FIXED.md  WORKFLOW-STATUS.md  commit-and-push.bat  deploy-workflows.bat  deploy-workflows.ps1  deploy-workflows.sh  deploy.cmd  deploy.sh  docker-compose.yml  entrypoint.sh  index.html  jest.config.cjs  (+14 more)
.github/: .yamllint  PULL_REQUEST_TEMPLATE.md  dependabot.yml
app/: .env.example  Dockerfile  __init__.py  alembic.ini  config.py  database.py  dependencies.py  main.py  orm_models.py  prompts.py  requirements.txt  storage.py  tasks.py
credentials/: README.md
deploy/: setup.sh
docs/: CI-CD-PIPELINE.md  CI-CD-SETUP-GUIDE.md  COMPLETE-DOCUMENTATION-PACKAGE.md  DOCUMENTATION-MAP.md  DOCUMENTATION-SUMMARY.md  ENHANCEMENT-RECOMMENDATIONS.md  FINAL-DELIVERABLES.md  LINTER-WARNINGS-EXPLAINED.md  MOBILE_TEST_CHECKLIST.md  README.md  SCHEDULED-WORKFLOWS.md  api-integration-patterns.md  api-spec.yaml  api.md  architecture-roadmap.md  architecture.md  background-jobs.md  celery-implementation-project-plan.md  deployment-runbooks.md  observability.md  (+6 more)
(+316 files in other folders)
