[project]
name = "apfa"
version = "1.0.0"
description = "AI-Powered Financial Advisor — RAG-based intelligent financial guidance"
license = {text = "MIT"}
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E501", "W503"]
