[build-system]
requires = ["setuptools >= 70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apfa-prod"
version = "0.1.0"
description = "AI-Powered Finance App"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "mypy",
  "black",
]